--- a/package.json
+++ b/package.json
@@ -1,31 +1,27 @@
 {
   "name": "express-standard-http-responses",
-  "version": "1.1.13",
+  "version": "2.0.0",
   "description": "Helper package used to manage http responses for express",
-  "main": "src/index.ts",
+  "main": "./lib/index.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn nodemon"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ArthurLERAY/express-standard-http-responses.git"
-  },
-  "types": "lib/index.d.ts",
   "keywords": [
     "express",
     "responses",
+    "response",
     "http",
     "nodejs",
     "typescript",
     "service"
   ],
   "author": "Arthur LE RAY",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ArthurLERAY/express-standard-http-responses/issues"
-  },
-  "homepage": "https://github.com/ArthurLERAY/express-standard-http-responses#README",
+  "license": "MIT",
   "devDependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
     "typescript": "^4.6.2"
   },
@@ -34,5 +30,12 @@
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "nodemonConfig": {
+    "watch": [
+      "tests"
+    ],
+    "ext": "ts",
+    "exec": "tsc && ts-node tests/test.ts"
+  }
 }
