--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
     "strictNullChecks": false
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*", "test.ts"]
+  "exclude": ["node_modules", "**/__tests__/*",
+    "tests/test.ts", "test.ts"
+  ]
 }
