--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/express": "^4.17.13"
   },
   "files": [
-    "lib/**/*"
+    "index.js", "index.d.ts", "interfaces/**", "LICENSE"
   ],
   "nodemonConfig": {
     "watch": [
