--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@types/express": "^4.17.13"
   },
   "files": [
-    "index.js", "index.d.ts", "interfaces/**", "LICENSE"
+    "index.js",
+    "index.d.ts",
+    "interfaces/**",
+    "LICENSE"
   ],
   "nodemonConfig": {
     "watch": [
