--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "nodemon": "^2.0.16",
     "ts-node": "^10.7.0",
     "tsc": "^2.0.4",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "express-standard-http-responses": "^2.1.0"
   },
   "dependencies": {
     "@types/express": "^4.17.13"
